Remove div vertical scrollbars to fix horizontal shift problem.

--- a/css/igv.css
+++ b/css/igv.css
@@ -1064,7 +1064,7 @@ div.ui-dialog fieldset {
     right: 50px;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .igv-app-icon-container {
